# libx-msg-im-group-msg

./: CMakeLists.txt  README.md  XmsgImGroupMsg.cpp  XmsgImGroupMsg.h  libx-msg-im-group-msg.h
mgr/: XmsgImMgrNeNetLoad.h
msg/: XmsgImGroupCreate.cpp  XmsgImGroupCreate.h  XmsgImGroupInfoQuery.cpp  XmsgImGroupInfoQuery.h  XmsgImGroupInfoUpdate.cpp  XmsgImGroupInfoUpdate.h  XmsgImGroupMemberAdd.cpp  XmsgImGroupMemberAdd.h  XmsgImGroupMemberDelete.cpp  XmsgImGroupMemberDelete.h  XmsgImGroupMemberQuery.cpp  XmsgImGroupMemberQuery.h  XmsgImGroupMemberUpdate.cpp  XmsgImGroupMemberUpdate.h  XmsgImGroupMsgQuery.cpp  XmsgImGroupMsgQuery.h  XmsgImGroupMsgRead.cpp  XmsgImGroupMsgRead.h  XmsgImGroupMsgRecvCfg.cpp  XmsgImGroupMsgRecvCfg.h  XmsgImGroupMsgSync.cpp  XmsgImGroupMsgSync.h  XmsgImGroupSync.cpp  XmsgImGroupSync.h  XmsgImGroupSyncGroup.cpp  XmsgImGroupSyncGroup.h  XmsgImGroupUsrGroupQuery.cpp  XmsgImGroupUsrGroupQuery.h
msg/send/: SendMsgUsrLocal.cpp  SendMsgUsrLocal.h  XmsgImGroupSendMsg.cpp  XmsgImGroupSendMsg.h
ne/: XmsgApClientEstb.cpp  XmsgApClientEstb.h  XmsgApClientLost.cpp  XmsgApClientLost.h  XmsgImGroupChannelStatusSub.cpp  XmsgImGroupChannelStatusSub.h  XmsgImGroupObjInfoQuery.cpp  XmsgImGroupObjInfoQuery.h  XmsgImHlrUsrInit.cpp  XmsgImHlrUsrInit.h  XmsgNeAuth.cpp  XmsgNeAuth.h
